WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20404
Full-screen movies flicker while playing
https://bugs.webkit.org/show_bug.cgi?id=20404
Summary
Full-screen movies flicker while playing
Juan Falgueras
Reported
2008-08-15 12:57:10 PDT
I've tested it the same pages with Safari and it works ok.
Attachments
Patch to ignore setVisible when state is not changing.
(2.36 KB, patch)
2008-08-19 10:40 PDT
,
Eric Carlson
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2008-08-16 17:53:32 PDT
***
Bug 20411
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 2
2008-08-16 17:55:00 PDT
<
rdar://problem/6154695
>
Adele Peterson
Comment 3
2008-08-18 11:15:08 PDT
does this happen with all videos from this page? or one particular video?
Tracy Valleau
Comment 4
2008-08-18 11:32:18 PDT
additional URLS:
http://amz.clickontyler.com/blog/screencast1.mov
http://www.lullabot.com/files/MacLocalhost.mp4
Gavin Sherlock
Comment 5
2008-08-19 07:12:53 PDT
Testing with:
http://media.railscasts.com/videos/001_caching_with_instance_variable.mov
it regressed between
r35755
and
r35773
. To my untrained eye, I suspect:
http://trac.webkit.org/changeset/35772
but as I say, it's an untrained eye. I don't have privileges to update the title and priority to reflect that it's a regression, and when it regressed.
Eric Carlson
Comment 6
2008-08-19 10:40:18 PDT
Created
attachment 22877
[details]
Patch to ignore setVisible when state is not changing.
Adele Peterson
Comment 7
2008-08-19 10:56:12 PDT
Committed revision 35840.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug