2008-08-19  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Adele.

        Fix for <rdar://problem/6154695> Full-page movies flicker while playing
        https://bugs.webkit.org/show_bug.cgi?id=20404

        Ignore setVisible() when visibility doesn't change.

        * platform/graphics/mac/MediaPlayerPrivateQTKit.h:
        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::MediaPlayerPrivate::MediaPlayerPrivate):
        (WebCore::MediaPlayerPrivate::setVisible):



Canonical link: https://commits.webkit.org/28246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35840 268f45cc-cd09-0410-ab3c-d52691b4dbfc